--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
     "mongodb": "^6.0.0",
-    "mongoose": "^7.5.0",
+    "mongoose": "^7.5.4",
     "next": "13.4.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -27,10 +27,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "autoprefixer": "^10.4.16",
     "dotenv": "^16.3.1",
     "eslint-plugin-jest": "^27.2.2",
     "jest": "^29.6.0",
-    "jest-environment-jsdom": "^29.6.0"
+    "jest-environment-jsdom": "^29.6.0",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.3"
   },
   "description": "Next.js (incl. Styled Components and Jest)",
   "nf": {
